# audio-cast

./: .gitignore  LICENSE  README.md  discover_devices  discover_devices.py  vlc-stream-script.md
.github/workflows/: android.yml
audio-cast-android/: README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
audio-cast-android/app/: build.gradle  build.gradle.kts
audio-cast-android/app/src/androidTest/java/com/scythe/audiocast/: ExampleInstrumentedTest.kt
audio-cast-android/app/src/main/: AndroidManifest.xml
audio-cast-android/app/src/main/java/com/scythe/audiocast/: AudioCastApp.kt  CastActivity.kt  MainActivity.kt  TestActivity.kt  WelcomeActivity.kt  WelcomeViewModel.kt
audio-cast-android/app/src/main/res/values/: strings.xml  themes.xml
audio-cast-android/app/src/main/res/values-night/: themes.xml
audio-cast-android/buildSrc/src/main/java/: ConfigData.kt  Dependencies.kt  Versions.kt
audio-cast-android/gradle/wrapper/: gradle-wrapper.properties
audio-cast-app/: .gitignore  README.md  requirements.txt  setup.cfg
audio-cast-app/audio_cast/: __init__.py  discover_devices.py  discover_media.py  discoverer_devices.py  endpoints.py  player.py  utils.py
audio-cast-app/audio_cast/scripts/: command.py
audio-cast-app/src/audio_cast/: discover_media.py  endpoints.py  player.py
linux-cast-app/: .gitignore  README.md  app.py  discover_devices.py  known_devices.txt  player.py  requirements  requirements.txt
linux-cast-app/app/: endpoints.py  player.py  webapp.py
linux-cast-app/src/audio_cast/: discover_devices.py  endpoints.py
(+23 files in other folders)
