[metadata]
name = audio-cast
version = 0.0.16
author = Juan Camilo Garcia
author_email = scythedev@gmail.com
description = A system to cast audio input to chromecast devices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juancamilo87/linux-cast
project_urls =
    Bug Tracker = https://github.com/juancamilo87/linux-cast/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    casttube==0.2.1
    certifi==2021.5.30
    charset-normalizer==2.0.5
    click==8.0.1
    colorama==0.4.4
    Flask==2.0.1
    idna==3.2
    ifaddr==0.1.7
    itsdangerous==2.0.1
    Jinja2==3.0.1
    MarkupSafe==2.0.1
    prettytable==2.2.0
    protobuf==3.17.3
    PyChromecast==9.2.0
    python-vlc==3.0.12118
    requests==2.26.0
    six==1.16.0
    sounddevice==0.4.2
    urllib3==1.26.6
    wcwidth==0.2.5
    Werkzeug==2.0.1
    zeroconf==0.36.3
[options.entry_points]
console_scripts =
    audio-cast = audio_cast.scripts.command:cli